--- a/pandamarket-ts/package.json
+++ b/pandamarket-ts/package.json
@@ -12,7 +12,8 @@
     "date-fns": "^3.6.0",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tailwindcss": "^3.4.3"
   },
   "devDependencies": {
     "@types/node": "^20",
